<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@mipmap/lobo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="168dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@mipmap/logo" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="199dp"
        android:layout_height="54dp"
        android:onClick="IngreseNombre"
        android:text="@string/btn_ingresar"
        android:textColor="@color/rosa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />

    <Button
        android:id="@+id/btn_Blockdenotas"
        android:layout_width="199dp"
        android:layout_height="54dp"
        android:onClick="BlockDeNotas"
        android:text="@string/btn_Blockdenotas"
        android:textColor="@color/rosa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <Button
        android:id="@+id/btn_agenda"
        android:layout_width="199dp"
        android:layout_height="54dp"
        android:onClick="Agenda"
        android:text="@string/btn_agenda"
        android:textColor="@color/rosa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <Button
        android:id="@+id/btn_sharePreferences"
        android:layout_width="199dp"
        android:layout_height="54dp"
        android:onClick="SharePreferences"
        android:textColor="@color/rosa"
        android:text="@string/btn_sharePreferences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <Button
        android:id="@+id/button"
        android:layout_width="199dp"
        android:layout_height="54dp"
        android:onClick="Cronometro"
        android:text="@string/btn_Cronometro"
        android:textColor="@color/rosa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757" />

    <Button
        android:id="@+id/button2"
        android:layout_width="199dp"
        android:layout_height="54dp"
        android:onClick="TimePicket"
        android:text="@string/btn_TimePicket"
        android:textColor="@color/rosa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

</androidx.constraintlayout.widget.ConstraintLayout>